updated the logging information

--- a/.ebextensions/my.config
+++ b/.ebextensions/my.config
@@ -1,7 +1,7 @@
 files:
   "/opt/elasticbeanstalk/tasks/taillogs.d/flask-init.conf":
     content: |
-      /tmp/logmyex.log
+      /tmp/my_app.log
   "/opt/elasticbeanstalk/tasks/bundlelogs.d/flask-init.conf":
     content: |
-      /tmp/logmyex.log
+      /tmp/my_app.log
