--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cryptography==3.1.1
 dnspython==2.0.0
 dominate==2.5.2
 email-validator==1.1.1
+flake8==3.8.3
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-CDN==1.5.3
@@ -41,7 +42,9 @@ packaging==20.4
 pbr==5.5.0
 pluggy==0.13.1
 py==1.9.0
+pycodestyle==2.6.0
 pycparser==2.20
+pyflakes==2.2.0
 pylint==2.6.0
 PyMySQL==0.10.1
 pyparsing==2.4.7
