--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,11 @@
 sonar.organization=greendinosaur
-sonar.projectKey=greendinosaur_log-my-exercise
+sonar.projectKey=greendinosaur_flask-aws-template
 sonar.host.url=https://sonarcloud.io
 
+sonar.projectName=flask-aws-template
+sonar.projectVersion=1.0
 
-sonar.sources=app, logmyexercise.py
+sonar.sources=app, my_app.py
 sonar.python.coverage.reportPaths=coverage.xml
+
+sonar.sourceEncoding=UTF-8
