excluding test files from sonar scans

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,8 @@ sonar.host.url=https://sonarcloud.io
 sonar.projectName=flask-aws-template
 sonar.projectVersion=1.0
 
+sonar.test.exclusions=app/tests/*
+
 sonar.sources=app, my_app.py
 sonar.python.coverage.reportPaths=coverage.xml
 
